Rename username to uid in api endpoints
